recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:11: error: expected start of definition
override def run() {
         ^FourSquare:18: error: Unmatched closing brace '}' ignored here
}
^